--- a/css/index-css.css
+++ b/css/index-css.css
@@ -473,8 +473,8 @@
       font-size: 18px;
      }
      .text-2 .faca-mais-img-2 img{
-       padding-left: 10px;
-       margin-left: -95px;
+       padding-left: 30px;
+       margin-left: -110px;
        width: 280px;
       }
  }
@@ -494,8 +494,8 @@
    }
    .text-2 .faca-mais-img-2 img{
     padding-left: 10px;
-    margin-left: -85px;
-    width: 225px;
+    margin-left: -95px;
+    width: 260px;
    }
  }
  @media(max-width: 350px) {
@@ -546,6 +546,10 @@
     margin-bottom: 20px;
   }
   @media(max-width: 600px){
+    .slide-background{
+      margin-top: 5rem;
+      padding: 5rem 0rem 2rem 0rem;
+    }
     .background-text{
       font-size: 20px;
     }
@@ -558,6 +562,10 @@
     }
   }
   @media(max-width: 400px){
+    .slide-background{
+      margin-top: 5rem;
+      padding: 4rem 0rem 2rem 0rem;
+    }
     .background-text{
       font-size: 18px;
     }
@@ -566,13 +574,13 @@
       margin-top: 0.5rem;
       width: 10rem;
       border: 2px solid #d6d3d3;
-      margin-bottom: -12rem;
+      margin-bottom: -8rem;
     }
   }
   @media(max-width: 350px){
     .slide-background{
       margin-top: 5rem;
-      padding: 4rem 0rem 2rem 0rem;
+      padding: 4rem 0rem 0rem 0rem;
     }
     .background-text{
       font-size: 16px;
@@ -582,7 +590,7 @@
       margin-top: 0.5rem;
       width: 10rem;
       border: 1.5px solid #d6d3d3;
-      margin-bottom: -12rem;      
+      margin-bottom: -5rem;      
     }
   }
 
@@ -692,6 +700,62 @@
     transform: translateY(20%);
     transition: transform 0.3s;
   }
+  @media(max-width: 600px){
+    .content{
+      transform: translateY(-20%);
+    }
+    .carousel .card:hover .content {
+      transform: translateY(-20%);
+    }
+    .btn{
+      transform: translateY(-15%);
+    }
+    #btn-no{
+      transform: translateY(-15%);
+    }
+    .container-card-slide{
+      margin-top: -4rem;
+      margin-bottom: -12rem;
+    }
+  }
+  @media(max-width: 400px){
+    .content{
+      transform: translateY(-12%);
+    }
+    .carousel .card:hover .content {
+      transform: translateY(-12%);
+    }
+    .btn{
+      transform: translateY(-50%);
+    }
+    #btn-no{
+      transform: translateY(-15%);
+    }
+    .container-card-slide{
+      margin-top: -2rem;
+      margin-bottom: -8rem;
+    }
+  }
+  @media(max-width: 350px){
+    .content{
+      transform: translateY(0%);
+      transform: none;
+    }
+    .carousel .card:hover .content {
+      transform: none;
+    }
+    .btn{
+      transform: translateY(-50%);
+    }
+    #btn-no{
+      transform: translateY(-15%);
+    }
+    .container-card-slide{
+      margin-top: -5rem;
+      margin-bottom: -3rem;
+    }
+  }
+
   .card:hover .content {
     transform: translateY(-30%);
   }
